--- a/cruddemovs2/src/main/resources/application.properties
+++ b/cruddemovs2/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#
+#JDBC properties
+#
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
+spring.datasourec.username=spingstudent
+spring.datasource.password=springstudent
