--- a/cruddemovs2/src/main/resources/application.properties
+++ b/cruddemovs2/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #
 #JDBC properties
 #
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
-spring.datasourec.username=spingstudent
-spring.datasource.password=springstudent
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasourec.username=AlexPC
+spring.datasource.password=Qwerty1234
+server.port = 8090
